--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "jquery": "^3.6.0",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
+    "@types/jquery": "^3.5.5",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "typescript": "^4.2.2"
   }
 }
